--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "core-js": "^3.3.2",
     "element-ui": "^2.15.6",
     "qs": "^6.9.1",
-    "vue": "^2.6.10",
+    "vue": "^2.6.14",
     "vue-axios": "^2.1.5",
+    "vue-puzzle-vcode": "^1.1.9",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "wangeditor": "^3.1.1"
@@ -26,7 +27,7 @@
     "compression-webpack-plugin": "^6.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
